kubernetes/apps/networking/external/stash/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app stash
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-method: GET
  #   nginx.ingress.kubernetes.io/auth-url: http://authelia.security.svc.cluster.local/api/verify
  #   nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}?rm=$request_method
  #   nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
  #   nginx.ingress.kubernetes.io/auth-snippet: |
  #     proxy_set_header X-Forwarded-Method $request_method;
spec:
  ingressClassName: nginx
  rules:
    - host: &host "stash.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9999
  tls:
    - hosts:
        - *host
